--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -21,12 +21,10 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
-      - name: Telegram Action
-        uses: xinthink/action-telegram@v1.1
+      - name: Notify Telegram
+  # You may pin to the exact commit or the version.
+  # uses: yanzay/notify-telegram@1025564e15f68b2fcddeba37b5bfaf4033c79448
+        uses: yanzay/notify-telegram@v0.1.0
         with:
-          # Используйте секреты GitHub для токена и ID чата
-          botToken: "7848898742:AAHdVwYYnxaRxQYuEyg4fb2HLHIwO5otEKg"
-          chatId: "-1002355425730"
-          # Опциональные параметры (раскомментируйте при необходимости):
-          # jobStatus: ${{ job.status }}
-          # skipSuccess: false
+          chat: "-1002355425730"
+          token: "7848898742:AAHdVwYYnxaRxQYuEyg4fb2HLHIwO5otEKg"
