--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -21,11 +21,8 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
-      - name: Notify Telegram
-  # You may pin to the exact commit or the version.
-  # uses: yanzay/notify-telegram@1025564e15f68b2fcddeba37b5bfaf4033c79448
-        uses: yanzay/notify-telegram@v0.1.0
+      - name: Notify the commit on Telegram
+        uses: EverythingSuckz/github-telegram-notify@main
         with:
-          chat: "-1002355425730"
-          token: "7848898742:AAHdVwYYnxaRxQYuEyg4fb2HLHIwO5otEKg"
-          status: ${{ job.status }}
+          bot_token: "7848898742:AAHdVwYYnxaRxQYuEyg4fb2HLHIwO5otEKg"
+          chat_id: "-1002355425730"
